crates/otter-vm/tests/compile_fail/frame_is_not_send.stderr
error[E0277]: `*mut otter_vm::Value` cannot be sent between threads safely
 --> tests/compile_fail/frame_is_not_send.rs:8:19
  |
8 |     assert_send::<otter_vm::Frame>();
  |                   ^^^^^^^^^^^^^^^ `*mut otter_vm::Value` cannot be sent between threads safely
  |
  = help: within `Frame`, the trait `Send` is not implemented for `*mut otter_vm::Value`
note: required because it appears within the type `RegisterWindow`
 --> src/register_stack.rs
  |
  | pub struct RegisterWindow {
  |            ^^^^^^^^^^^^^^
note: required because it appears within the type `Frame`
 --> src/frame_state.rs
  |
  | pub struct Frame {
  |            ^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/frame_is_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const ()` cannot be sent between threads safely
 --> tests/compile_fail/frame_is_not_send.rs:8:19
  |
8 |     assert_send::<otter_vm::Frame>();
  |                   ^^^^^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
  |
  = help: within `Frame`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
 --> src/value/mod.rs
  |
  | pub struct Value(u64, std::marker::PhantomData<*const ()>);
  |            ^^^^^
note: required because it appears within the type `Frame`
 --> src/frame_state.rs
  |
  | pub struct Frame {
  |            ^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/frame_is_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const UpvalueCellBody` cannot be sent between threads safely
 --> tests/compile_fail/frame_is_not_send.rs:8:19
  |
8 |     assert_send::<otter_vm::Frame>();
  |                   ^^^^^^^^^^^^^^^ `*const UpvalueCellBody` cannot be sent between threads safely
  |
  = help: within `[otter_gc::compressed::Gc<UpvalueCellBody>]`, the trait `Send` is not implemented for `*const UpvalueCellBody`
note: required because it appears within the type `PhantomData<*const UpvalueCellBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<UpvalueCellBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
  = note: required because it appears within the type `[otter_gc::compressed::Gc<UpvalueCellBody>]`
  = note: required for `std::ptr::Unique<[otter_gc::compressed::Gc<UpvalueCellBody>]>` to implement `Send`
note: required because it appears within the type `Box<[otter_gc::compressed::Gc<UpvalueCellBody>]>`
 --> $RUST/alloc/src/boxed.rs
  |
  | pub struct Box<
  |            ^^^
note: required because it appears within the type `Frame`
 --> src/frame_state.rs
  |
  | pub struct Frame {
  |            ^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/frame_is_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`
